[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roman_numeral_calc"
version = "1.0"
description = "A calculator for Roman numerals"
authors = [
    { name = "Isaac Watts", email = "Isaac.s.watts@gmail.com" } 
]
dependencies = ["pytest==8.3.2"]
readme = "README.md"
requires-python = ">= 3.0"

[project.scripts]
calculator = "Roman_numeral_calc.calculator:main"

[project.urls]
Repository = "https://github.com/IwattsX/Roman_Calculator"
"Bug Tracker" = "https://github.com/IwattsX/Roman_Calculator/issues"